--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -531,6 +531,7 @@
   "syncConfGuide5": "אם הכמות של הנתונים גבוהה, הסנכרון הראשון יתקשח, אנא חכה בסבלנות<br>אל תחליף אפליקציות ושמור על המסך מואר בזמן שמכשירי iOS/iPad בתהליך סנכרון",
   "copyPlainText": "העתק טקסט פשוט",
   "findInDoc": "התאמות ${y} בלוקים ב${x} מסמכים",
+  "matchDoc": "נמצאו ${x} מסמכים",
   "jumpToParentNext": "קפוץ לבלוק הבא של הבלוק ההורה",
   "jumpToParentPrev": "קפוץ לבלוק הקודם של הבלוק ההורה",
   "jumpToParent": "קפוץ לבלוק ההורה",
