--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -531,6 +531,7 @@
   "syncConfGuide5": "Если объем данных большой, первая синхронизация будет медленной, пожалуйста, ожидайте терпеливо<br>Не переключайте приложения и поддерживайте экран ярким, пока iOS/iPad синхронизирует",
   "copyPlainText": "Скопировать обычный текст",
   "findInDoc": "Соответствует ${y} блокам в ${x} документах",
+  "matchDoc": "Найдено ${x} документов",
   "jumpToParentNext": "Перейти к следующему блоку родительского блока",
   "jumpToParentPrev": "Перейти к предыдущему блоку родительского блока",
   "jumpToParent": "Перейти к родительскому блоку",
