--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -531,6 +531,7 @@
   "syncConfGuide5": "If the amount of data is large, the first sync will be slow, please wait patiently<br>Do not switch apps and keep the screen bright while the iOS/iPad is syncing",
   "copyPlainText": "Copy plain text",
   "findInDoc": "Matches ${y} blocks in ${x} documents",
+  "matchDoc": "Matched ${x} documents",
   "jumpToParentNext": "Jump to the next block of the parent block",
   "jumpToParentPrev": "Jump to the previous block of the parent block",
   "jumpToParent": "Jump to parent block",
