--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -531,6 +531,7 @@
   "syncConfGuide5": "如果資料量較大，第一次同步會比較慢，請耐心等待<br>iOS/iPad 端在同步時請勿切換應用並保持螢幕恆亮",
   "copyPlainText": "複製純文字",
   "findInDoc": "${x} 個文件中符合 ${y} 個塊",
+  "matchDoc": "匹配到 ${x} 個文檔",
   "jumpToParentNext": "跳到父塊的下一個塊",
   "jumpToParentPrev": "跳到父塊的上一個塊",
   "jumpToParent": "跳到父塊",
