:art: Improve assets rename https://github.com/siyuan-note/siyuan/issues/12497

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -1425,7 +1425,7 @@
     "108": "Daten-Synchronisierung fand Konflikte, Sie können den generierten Konfliktinhalt in [Datenverlauf] anzeigen.",
     "109": "Erinnerung Entfernen abgeschlossen [%s]",
     "110": "Umbenennung...",
-    "111": "Dokument [%s] speichern...",
+    "111": "Daten werden gespeichert [%s]...",
     "112": "Markdown-Syntaxzeichen [%s] nicht einfügen",
     "113": "Daten beschreiben abschließen...",
     "114": "Tag kann nicht leer sein",
