--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1425,7 +1425,7 @@
     "108": "Data sync found conflicts, you can view the generated conflict content in [Data History]",
     "109": "Remove reminder completed [%s]",
     "110": "Renaming...",
-    "111": "Saving document [%s]...",
+    "111": "Saving data [%s]...",
     "112": "Do not include Markdown syntax marker [%s]",
     "113": "Completing data writing...",
     "114": "Tag cannot be empty",
