--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -1425,7 +1425,7 @@
     "108": "La sincronizaci\u00f3n de datos encontr\u00f3 en conflictos, puede ver el contenido del conflicto generado en [Historial de datos]",
     "109": "Eliminación de recordatorios completada [%s]",
     "110": "Renombrar...",
-    "111": "Guardando documento [%s]...",
+    "111": "Guardando los datos [%s]...",
     "112": "No incluir marcador de sintaxis Markdown [%s]",
     "113": "Completando la escritura de datos...",
     "114": "La etiqueta no puede estar vacía",
