--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1425,7 +1425,7 @@
     "108": "נמצא סכסוך בנתוני הסנכרון, תוכל לראות את התוכן שנוצר בסכסוך ב[היסטוריית הנתונים]",
     "109": "הסרת תזכורת הושלמה [%s]",
     "110": "מחזיק...",
-    "111": "שומר את המסמך [%s]...",
+    "111": "שומר את הנתונים [%s]...",
     "112": "אין לכלול את סימן התחביר של Markdown [%s]",
     "113": "שלמת הנתונים מתבצעת...",
     "114": "תייג לא יכול להיות ריקן",
