--- a/app/appearance/langs/it_IT.json
+++ b/app/appearance/langs/it_IT.json
@@ -1425,7 +1425,7 @@
     "108": "La sincronizzazione dei dati ha trovato conflitti, puoi visualizzare il contenuto del conflitto generato in [Cronologia Dati]",
     "109": "Rimozione del promemoria completata [%s]",
     "110": "Rinominando...",
-    "111": "Salvataggio del documento [%s]...",
+    "111": "Salvataggio dei dati [%s]...",
     "112": "Non includere il marcatore di sintassi Markdown [%s]",
     "113": "Completamento della scrittura dei dati...",
     "114": "L'etichetta non può essere vuota",
