--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1425,7 +1425,7 @@
     "108": "データ同期で競合が検出されました。生成された競合内容は [データ履歴] で確認できます",
     "109": "リマインダーの削除が完了しました [%s]",
     "110": "名前を変更しています...",
-    "111": "ドキュメントを保存しています [%s]...",
+    "111": "データを保存しています [%s]...",
     "112": "Markdown 構文マーカーを含めないでください [%s]",
     "113": "データの書き込みを完了しています...",
     "114": "タグは空にできません",
