--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -1425,7 +1425,7 @@
     "108": "Synchronizacja danych wykryła konflikty, możesz zobaczyć wygenerowaną treść konfliktów w [Historii danych]",
     "109": "Usunięcie przypomnienia zakończone [%s]",
     "110": "Zmiana nazwy...",
-    "111": "Zapisywanie dokumentu [%s]...",
+    "111": "Zapisywanie danych [%s]...",
     "112": "Nie dołączać znacznika składni Markdown [%s]",
     "113": "Zakończenie pisania danych...",
     "114": "Tag nie może być pusty",
