--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1425,7 +1425,7 @@
     "108": "Синхронизация данных обнаружила конфликты, вы можете просмотреть созданный контент конфликта в [Истории данных]",
     "109": "Удаление напоминания завершено [%s]",
     "110": "Переименование...",
-    "111": "Сохранение документа [%s]...",
+    "111": "Сохранение данных [%s]...",
     "112": "Не включать маркер синтаксиса Markdown [%s]",
     "113": "Завершение записи данных...",
     "114": "Тег не может быть пустым",
