--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1425,7 +1425,7 @@
     "108": "数据同步发现冲突，可在 [数据历史] 中查看生成的冲突内容",
     "109": "移除提醒完毕 [%s]",
     "110": "正在重命名...",
-    "111": "正在保存文档 [%s]...",
+    "111": "正在保存数据 [%s]...",
     "112": "请勿包含 Markdown 语法标记符 [%s]",
     "113": "正在完成数据写入...",
     "114": "标签不能为空",
