--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -1425,7 +1425,7 @@
     "108": "La synchronisation des données a trouvé des conflits, vous pouvez afficher le contenu du conflit généré dans [Historique des données]",
     "109": "Supprimer le rappel terminé [%s]",
     "110": "Renommer...",
-    "111": "Enregistrement du document [%s]...",
+    "111": "Enregistrement des données [%s]...",
     "112": "Ne pas inclure les balises de syntaxe Markdown [%s]",
     "113": "Fin de l'écriture des données...",
     "114": "La balise ne peut pas être vide",
