--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1425,7 +1425,7 @@
     "108": "資料同步發現衝突，可在 [資料歷史] 中查看生成的衝突內容",
     "109": "移除提醒完畢 [%s]",
     "110": "正在重命名...",
-    "111": "正在保存文檔 [%s]...",
+    "111": "正在保存数据 [%s]...",
     "112": "請勿包含 Markdown 語法標記符 [%s]",
     "113": "正在完成資料寫入...",
     "114": "標籤不能為空",
