:art: Find-replace support file annotation ref elements https://github.com/siyuan-note/siyuan/issues/13013

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -134,6 +134,7 @@
     "inlineMath": "Inline-Formel",
     "inlineMemo": "Inline-Notiz",
     "blockRef": "Referenz-Ankertext",
+    "fileAnnotationRef": "PDF-Anmerkungsankertext",
     "kbd": "Tastatur",
     "mark": "Markierung",
     "s": "Durchgestrichen",
