--- a/app/appearance/langs/es_ES.json
+++ b/app/appearance/langs/es_ES.json
@@ -133,7 +133,8 @@
     "strong": "negrita",
     "inlineMath": "Fórmula en línea",
     "inlineMemo": "Nota en línea",
-    "blockRef": "texto de anclaje de referencia",
+    "blockRef": "Texto de anclaje de referencia",
+    "fileAnnotationRef": "Texto de anclaje de la anotación PDF",
     "kbd": "Teclado",
     "mark": "Marca",
     "s": "Tachado",
