--- a/app/appearance/langs/fr_FR.json
+++ b/app/appearance/langs/fr_FR.json
@@ -133,7 +133,8 @@
     "strong": "Audacieux",
     "inlineMath": "Formule en ligne",
     "inlineMemo": "Mémo en ligne",
-    "blockRef": "texte d'ancrage de référence",
+    "blockRef": "Texte d'ancrage de référence",
+    "fileAnnotationRef": "Texte d'ancrage de l'annotation PDF",
     "kbd": "Clavier",
     "mark": "Marquer",
     "s": "Barré",
