--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -134,6 +134,7 @@
     "inlineMath": "מתמטיקה פנימית",
     "inlineMemo": "הערה פנימית",
     "blockRef": "טקסט עוגן ייחוס",
+    "fileAnnotationRef": "טקסט עוגן של הערת PDF",
     "kbd": "מקלדת",
     "mark": "ציון",
     "s": "קו מחיקה",
