--- a/app/appearance/langs/pl_PL.json
+++ b/app/appearance/langs/pl_PL.json
@@ -134,6 +134,7 @@
     "inlineMath": "Formuła w linii",
     "inlineMemo": "Notatka w linii",
     "blockRef": "Tekst zakotwiczenia ref",
+    "fileAnnotationRef": "Odnośnik do adnotacji PDF",
     "kbd": "Klawiatura",
     "mark": "Zaznacz",
     "s": "Przekreślenie",
