--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -134,6 +134,7 @@
     "inlineMath": "Встраиваемая формула",
     "inlineMemo": "Встраиваемая заметка",
     "blockRef": "Текст анкора ссылки",
+    "fileAnnotationRef": "Анкор текста аннотации PDF",
     "kbd": "Клавиатура",
     "mark": "Знак",
     "s": "Перечеркнуто",
