--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -134,6 +134,7 @@
     "inlineMath": "Inline formula",
     "inlineMemo": "Inline memo",
     "blockRef": "Ref anchor text",
+    "fileAnnotationRef": "PDF annotation anchor text",
     "kbd": "Keyboard",
     "mark": "Mark",
     "s": "Strikethrough",
