--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -134,6 +134,7 @@
     "inlineMath": "行級公式",
     "inlineMemo": "行級備註",
     "blockRef": "引用錨文本",
+    "fileAnnotationRef": "PDF 標註錨文本",
     "kbd": "鍵盤",
     "mark": "高亮",
     "s": "刪除",
