--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -134,6 +134,7 @@
     "inlineMath": "行级公式",
     "inlineMemo": "行级备注",
     "blockRef": "引用锚文本",
+    "fileAnnotationRef": "PDF 标注锚文本",
     "kbd": "键盘",
     "mark": "高亮",
     "s": "删除",
