--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1470,7 +1470,7 @@
     "153": "Downloaded files %d, chunks %d, received bytes %s",
     "154": "The cloud can only support backup up to 12 snapshots",
     "155": "Cloud sync directory has been reset to [main]",
-    "156": "Access authentication failed, please refresh or reopen it",
+    "156": "Authentication failed, please <button onclick=\"window.location.reload()\">refresh</button> or reopen",
     "157": "The key is not recognized, please confirm that the copied key string is correct",
     "158": "Indexing data repo, walking data %s",
     "159": "Indexing data repo, getting the latest file %v/%v",
