--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -1470,7 +1470,7 @@
     "153": "הורדו קבצים %d, חלקים %d, בתים שהתקבלו %s",
     "154": "הענן תומך אך ורק בגיבוי עד 12 צילומים",
     "155": "תיקיית הסנכרון בענן הושבה ל[ראשית]",
-    "156": "אישור הגישה נכשל, אנא רענן או פתח מחדש",
+    "156": "אימות נכשל, אנא <button onclick=\"window.location.reload()\">רענן</button> או פתח מחדש",
     "157": "המפתח אינו מזוהה, אנא וודא שהמפתח שהועתק נכון",
     "158": "מאנדקס את מאגר הנתונים, עובר על הנתונים %s",
     "159": "מאנדקס את מאגר הנתונים, מקבל את הקובץ העדכני %v/%v",
