--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1470,7 +1470,7 @@
     "153": "ダウンロードされたファイル %d、チャンク %d、受信バイト %s",
     "154": "クラウドでサポートされるスナップショットのバックアップ数は最大12個です",
     "155": "クラウド同期ディレクトリが [main] にリセットされました",
-    "156": "アクセス認証に失敗しました。更新するか再起動してください",
+    "156": "認証に失敗しました。<button onclick=\"window.location.reload()\">リロード</button>するか、再度開いてください",
     "157": "キーが認識されません。キーが間違っていないか確認してください",
     "158": "データリポジトリのインデックス作成: データを走査中 %s",
     "159": "データリポジトリのインデックス作成: 最新ファイルを取得中 %v/%v",
