--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1470,7 +1470,7 @@
     "153": "Скачанные файлы %d, части %d, полученные байты %s",
     "154": "Облако может поддерживать резервное копирование только до 12 снимков",
     "155": "Директория облачной синхронизации была сброшена до [главной]",
-    "156": "Аутентификация доступа не удалась, пожалуйста, обновите или переоткройте её",
+    "156": "Аутентификация доступа не удалась, пожалуйста, <button onclick=\"window.location.reload()\">обновите</button> или переоткройте её",
     "157": "Ключ не распознается, пожалуйста, подтвердите, что скопированная строка ключа правильная",
     "158": "Индексирование репозитория данных, прогулка по данным %s",
     "159": "Индексирование репозитория данных, получение последнего файла %v/%v",
