--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -1564,6 +1564,7 @@
     "247": "Файл [%s] больше максимального ограничения [%s] и был проигнорирован для загрузки в облако",
     "248": "Целевой заголовок находится в контейнерном блоке и не может использоваться как пункт сброса",
     "249": "Из-за ошибки конфигурации невозможно получить доступ к данным. Пожалуйста, проверьте настройки и права доступа к облачному хранилищу",
-    "250": "Запрос был ограничен облачным хранилищем. Пожалуйста, проверьте настройки и права доступа к облачному хранилищу"
+    "250": "Запрос был ограничен облачным хранилищем. Пожалуйста, проверьте настройки и права доступа к облачному хранилищу",
+    "251": "Всего неиспользованных активов [%d], здесь перечислены только [%d]"
   }
 }
