--- a/app/appearance/langs/en_US.json
+++ b/app/appearance/langs/en_US.json
@@ -1564,6 +1564,7 @@
     "247": "File [%s] is larger than the maximum limit [%s], and has been ignored for uploading to the cloud",
     "248": "The target heading is located in the container block and cannot be used as a drop point",
     "249": "Unable to access data due to configuration error. Please check the settings and cloud storage permissions",
-    "250": "Request has been rate-limited by cloud storage. Please check the settings and cloud storage permissions"
+    "250": "Request has been rate-limited by cloud storage. Please check the settings and cloud storage permissions",
+    "251": "Total unused assets [%d], only [%d] listed here"
   }
 }
