--- a/app/appearance/langs/ja_JP.json
+++ b/app/appearance/langs/ja_JP.json
@@ -1564,6 +1564,7 @@
     "247": "ファイル [%s] は制限サイズ [%s] を超えているためアップロードされませんでした",
     "248": "目標の見出しがコンテナブロック内にあるためドロップできません",
     "249": "設定エラーのためデータにアクセスできません。設定を一つずつ確認し、クラウドストレージの権限を確認してください",
-    "250": "リクエストがクラウドストレージによって制限されました。設定を一つずつ確認し、クラウドストレージの権限を確認してください"
+    "250": "リクエストがクラウドストレージによって制限されました。設定を一つずつ確認し、クラウドストレージの権限を確認してください",
+    "251": "未使用のアセットの合計 [%d]、ここにリストされているのは [%d] のみ"
   }
 }
