--- a/app/appearance/langs/zh_CHT.json
+++ b/app/appearance/langs/zh_CHT.json
@@ -1564,6 +1564,7 @@
     "247": "檔案 [%s] 大於最大限制 [%s]，已忽略上傳至社群圖床",
     "248": "目標標題位於容器塊中，無法作為放置點",
     "249": "因配置錯誤導致無法存取數據，請仔細逐個核對配置項，並檢查雲端存儲相關權限配置",
-    "250": "請求已被雲端存儲限流，請仔細逐個核對配置項，並檢查雲端存儲相關權限配置"
+    "250": "請求已被雲端存儲限流，請仔細逐個核對配置項，並檢查雲端存儲相關權限配置",
+    "251": "未引用資源一共 ${x} 個，這裡僅列出 ${y} 個"
   }
 }
