--- a/app/appearance/langs/zh_CN.json
+++ b/app/appearance/langs/zh_CN.json
@@ -1564,6 +1564,7 @@
     "247": "文件 [%s] 大于最大限制 [%s]，已忽略上传到社区图床",
     "248": "目标标题位于容器块中，无法作为放置点",
     "249": "因配置错误导致无法存取数据，请仔细逐个核对配置项，并检查云端存储相关权限配置",
-    "250": "请求已被云端存储限流，请仔细逐个核对配置项，并检查云端存储相关权限配置"
+    "250": "请求已被云端存储限流，请仔细逐个核对配置项，并检查云端存储相关权限配置",
+    "251": "未引用资源一共 [%d] 个，这里仅列出 [%d] 个"
   }
 }
