--- a/app/appearance/langs/he_IL.json
+++ b/app/appearance/langs/he_IL.json
@@ -520,7 +520,7 @@
   "htmlBlockError": "ביצוע הסקריפט הבא ישפיע על תצוגת הממשק, והסקריפט הפסיק לפעול",
   "fileHistory": "היסטוריית קובץ",
   "htmlBlockTip": "בטל שורות HTML מרובות. כדי למנוע אובדן מידע, יש להשתמש בתגי <code class='fn__code'>&lt;div&gt;</code> כדי להקיף ולהסיר שורות ריקות",
-  "katexMacros": "הגדרת מאקרו KaTex",
+  "katexMacros": "הגדרת מאקרו KaTeX",
   "katexMacrosTip": "נא השתמש בפורמט אובייקט JSON (<code class='fn__code'>{}</code>) כדי לעטוף הגדרות מאקרו, לדוגמה <code class='fn__code'>{ \"\\\\foo\": \"{x^2}\" }</code>",
   "systemLogTip": "יומני ריצה של תוכנה נשמרים ביומן המערכת. על ידי ייצוא היומן ולשלח אותו למתכנתי תכניות, זה יכול לעזור במידה רבה לצוות המתכנתים לאבחן בעיות בתכנה",
   "systemLog": "יומן מערכת",
