--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -520,7 +520,7 @@
   "htmlBlockError": "Выполнение следующего скрипта повлияет на отображение интерфейса, и скрипт был остановлен",
   "fileHistory": "История файлов",
   "htmlBlockTip": "Сформированы несколько HTML блоков. Чтобы избежать потери данных, пожалуйста, используйте <code class='fn__code'>&lt;div&gt;</code> теги для обертки и удалите пустые строки",
-  "katexMacros": "Определение макроса KaTex",
+  "katexMacros": "Определение макроса KaTeX",
   "katexMacrosTip": "Пожалуйста, используйте формат JSON объекта (<code class='fn__code'>{}</code>) для обертки определений макросов, например <code class='fn__code'>{ \"\\\\foo\": \"{x^2}\" }</code>",
   "systemLogTip": "Записи работы программы сохраняются в системный журнал. Экспортируя системный журнал и отправив его разработчикам, это может лучше помочь разработчикам диагностировать проблемы программы",
   "systemLog": "Системный журнал",
