:art: Document icons support the use of dynamic icons https://github.com/siyuan-note/siyuan/issues/12943

--- a/app/appearance/langs/de_DE.json
+++ b/app/appearance/langs/de_DE.json
@@ -1,4 +1,5 @@
 {
+  "dynamicEmoji": "Icône dynamique",
   "backlinkContainChildren": "Enthalten Rückverweise untergeordnete Blöcke",
   "backlinkContainChildrenTip": "Wenn aktiviert, werden untergeordnete Blöcke in die Berechnung der Rückverweise einbezogen",
   "entryNum": "Anzahl der Einträge",
