--- a/app/appearance/langs/it_IT.json
+++ b/app/appearance/langs/it_IT.json
@@ -1,4 +1,5 @@
 {
+  "dynamicEmoji": "動的アイコン",
   "backlinkContainChildren": "I backlink contengono blocchi figli",
   "backlinkContainChildrenTip": "Dopo l'attivazione, i blocchi figli saranno inclusi nel calcolo dei backlink",
   "entryNum": "Numero di voci",
