--- a/app/appearance/langs/ru_RU.json
+++ b/app/appearance/langs/ru_RU.json
@@ -481,7 +481,7 @@
   "floatWindowMode": "Способ активации плавающего окна",
   "floatWindowModeTip": "Выберите способ вызова плавающего окна, когда мышь наводится на значок блока, значок хлебных крошек и т. д.",
   "floatWindowMode0": "Наведение",
-  "floatWindowMode1": "Нажмите и удерживайте <code class='fn__code'>${hotkey}</code> + Наведение",
+  "floatWindowMode1": "Нажмите и удерживайте ${hotkey} + Наведение",
   "floatWindowMode2": "Не вызывать",
   "codeSnippet": "Фрагмент кода",
   "codeSnippetTip": "Тонкая настройка интерфейса или функциональности с помощью фрагментов кода",
